files/styles.css
body {
    align-items: center;
    background-color: #000000;
    background-image: url('../image/laptop.jpg'); 
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    color: #00ff00;
    display: flex;
    flex-direction: column; 
    font-family: 'Courier New', monospace;
    height: 100vh;
    margin: 0;
    overflow: hidden;
    padding: 0;
}

a:link {
  color: #00ff00;
}

/* visited link */
a:visited {
  color: #00ff00;
}

/* mouse over link */
a:hover {
  color: red;
}

img {
    max-width: 100%;
    height: auto;
    border-radius: 10px;
    margin-top: 0;
    margin-bottom: 0; 
}

main {
    text-align: center;
    padding: 20px;
    border: 2px solid #000000;
    border-radius: 20px;
    background-color: rgba(0, 0, 0, 0.8);
    max-width: 720px;
    width: 720px;
}

footer {
    text-align: center;
    padding: 20px;
}

.tabs {
    display: flex;
    justify-content: space-evenly;
    margin-bottom: 15px;
    flex-direction: column; 
}

.button {
    display: inline-block;
    padding: 10px 20px;
    text-align: center;
    text-decoration: none;
    border: 1px solid red;
    cursor: pointer;
    border-radius: 5px;
    transition: background-color 0.3s ease;
    color: #fff;
    margin-bottom: 0; 
}

.nav-button {
    text-decoration: none;
    color: #00ff00;
}

.active-button {
    background-color: rgba(255, 60, 0, 0.3);
}

.button:hover {
    background-color: rgba(244, 153, 61, 0.6);
}

/* Add table styles */
.table-container {
    width: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    overflow: auto;
    margin-top: 20px; 
    margin: 0 auto;  
    border-radius: 20px;
    flex: 1;
}

.custom-table {
    width: 100%;
    border-collapse: collapse;
    background-color: black;
    color: #00ff00;
}

.custom-table td, .custom-table th {
    border: 1px solid #000;
    padding: 8px;
    text-align: left;
}

.custom-table tr:nth-child(even) {
    background-color: rgba(255, 255, 255, 0.1);
}

.custom-table caption {
  text-align: left;
  caption-side: bottom;
}

/* Media query for smaller screens */
@media screen and (max-width: 768px) {
    body {
        align-items: center;
        max-width: 90%;
        justify-content: center;
    }
 
    /* Vertical tabs for smaller screens */
    .tabs {
        flex-direction: row; 
    }
}

